force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Assigned__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>