force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Completed_Date__c</fullName>
    <description>Date the milestone is completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>