force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Disbursement__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>outfunds__Disbursement__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>