force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Due_Date__c</fullName>
    <description>Date the milestone is due.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>