force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Funding_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relationship to the Funding Request.</description>
    <label>Funding Request</label>
    <referenceTo>outfunds__Funding_Request__c</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>