force-app/main/default/objects/outfunds__Requirement__c/fields/outfunds__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>outfunds__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>