force-app/main/default/objects/outfunds__Requirement__c/fields/sfdo_grants__Identifier__c.field-meta.xml
<CustomField>
    <fullName>sfdo_grants__Identifier__c</fullName>
    <description>A unique identifier for a Requirement record</description>
    <displayFormat>R-{00000}</displayFormat>
    <inlineHelpText>A unique identifier for a Requirement record</inlineHelpText>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>