force-app/main/default/objects/outfunds__Requirement__c/listViews/outfunds__All.listView-meta.xml
<ListView>
    <fullName>outfunds__All</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Funding_Request__c</columns>
    <columns>outfunds__Assigned__c</columns>
    <columns>outfunds__Type__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Due_Date__c</columns>
    <columns>outfunds__Completed_Date__c</columns>
    <columns>outfunds__Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>