force-app/main/default/objects/outfunds__Requirement__c/listViews/outfunds__Recently_Completed_Milestones.listView-meta.xml
<ListView>
    <fullName>outfunds__Recently_Completed_Milestones</fullName>
    <columns>NAME</columns>
    <columns>outfunds__Funding_Request__c</columns>
    <columns>outfunds__Assigned__c</columns>
    <columns>outfunds__Type__c</columns>
    <columns>outfunds__Status__c</columns>
    <columns>outfunds__Due_Date__c</columns>
    <columns>outfunds__Completed_Date__c</columns>
    <columns>outfunds__Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>outfunds__Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>outfunds__Completed_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Recently Completed Milestones</label>
</ListView>